--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,29 @@
 </head>
 
 <body>
-    <h1>Иди купаться!!!!</h1>
+    <aside class="sidepannel">
+        <a href="#" class="sidepannel__link">
+            <img src="icons/social/facebook.svg" alt="facebook">
+        </a>
+        <a href="#" class="sidepannel__link">
+            <img src="icons/social/instagram.svg" alt="instagram">
+        </a>
+        <a href="#" class="sidepannel__link">
+            <img src="icons/social/github.svg" alt="github">
+        </a>
+        <div class="sidepannel__divider"></div>
+        <div class="sidepannel__text"><span>Социальные сети</span></div>
+    </aside>
+    <section class="promo">
+        <div class="container">
+            <div class="title_fz16 promo__subtitle">Меня зовут Саттаров Сухроб</div>
+            <h1 class="title title_fz48 promo__title">Я Web-Разработчик из города Бухара</h1>
+            <div class="promo__btns">
+                <a href="#" class="promo__link btn">Портфолио</a>
+                <a href="#" class="promo__link">Обо мне</a>
+            </div>
+        </div>
+    </section>
     <script src="js/script.js"></script>
 </body>
 
